# git_1

./: .flake8  Dockerfile  README.md  biology.docx  clock_main.py  crypto_library.py  docker_first.py  iss_main.py  iss_statistic.csv  jwt_tokens.py  library.py  pyproject.toml  settings.py  test_convert_cm_to_in.py  test_jwt_tokens.py  text.txt
.github/workflows/: check_code.yaml  testing_with_poetry.yaml
weather_app/: Dockerfile  pyproject.toml
