[tool.poetry]
name = "git-1"
version = "0.1.0"
description = ""
authors = ["Spivak Matvii <spivak.matvii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
